--- a/main.css
+++ b/main.css
@@ -304,7 +304,7 @@ transition: background-color 0.5s ease-in-out;
     }
   
     #nav li{
-        margin: 2px;
+        margin: 4px;
         
     }
     
@@ -351,8 +351,9 @@ transition: background-color 0.5s ease-in-out;
         flex-wrap: wrap;
     }
     .project-div{
-        height: 90vh;
+        height: 100vh;
     width: 100vw;
+    padding: 4px;
         
     
     }
