--- a/main.css
+++ b/main.css
@@ -87,7 +87,7 @@ gap: 3vh;
     padding-left: 7vw;
     padding-right: 7vw;
    margin-right: -1vw;
-    border: 3px solid var(--accent-color);
+    border: 3px solid var(--secondary-color);
 
     cursor: url(https://cur.cursors-4u.net/cursors/cur-2/cur230.cur), auto !important;
 
@@ -124,14 +124,72 @@ gap: 3vh;
    
 
 }
-#work ul{
-   list-style-type: none;
-   line-height:9vh;
-}
 #work ul li{
     font-size: x-large;
 
  }
+
+ #job-list {
+    list-style: none;
+    
+  }
+  
+  #job-list li {
+    display: flex;
+    align-items:flex-start;
+    padding: 10px 20px;
+    margin-bottom: 2vh;
+    cursor: url(https://cur.cursors-4u.net/cursors/cur-2/cur230.cur), auto !important;
+    border-radius: 5px;
+    background-color: #f0f0f0;
+    background: linear-gradient(45deg, var(--secondary-color), var(--secondary-color));
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition:transform 0.2s ease, background-color 0.2s ease, all 0.2s ease-in-out;
+  }
+  
+  #job-list li::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: var(--highlight-color);
+    transition: left 0.3s ease;
+}
+
+#job-list li:hover::before {
+    left: 110%;
+}
+
+#job-list li:hover {
+    background-color: var(--secondary-color);
+    background: linear-gradient(45deg, var(--accompany-color), var(--highlight-color));
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+   
+    transform: translateX(10px);
+}
+  
+  #job-list li i {
+    font-size: 24px;
+    margin-right: 10px;
+    color: var(--highlight-color);
+    transition: transform 0.2s ease-in-out;
+  }
+
+  #job-list li i:hover{
+    color: var(--secondary-color);
+  }
+  
+  #job-list li:hover i {
+    transform: scale(1.1); /* Subtle hover animation */
+  }
+  
+
+  
+
+
  #hobbies{
     list-style-type: none;
     display: flex;
@@ -238,21 +296,25 @@ width: 100%;
 .project-div a:hover{
     background-color:var(--primary-color) ;
 }
+.project-div img{
+    object-fit: contain;
+
+}
 
 #nuria{
-    background-image: url("/nuria.png");
+    height: 47.5vh;
     border: 6px solid var(--primary-color);
-    background-size: cover;
+    
 }
 #fool{
-    background-image: url("/fool.png");
+    height: 47.5vh;
     border: 6px solid var(--secondary-color);
-    background-size: cover;
+    
 }
 #zeraki{
-    background-image: url("/zeraki.png");
+    height: 51vh;
     border: 6px solid var(--primary-color);
-    background-size: cover;
+    
 }
 
 #contact{
@@ -287,7 +349,7 @@ transition: background-color 0.5s ease-in-out;
     transition: background-color 0.5s ease-in-out;
 }
 .span1:hover{
-    background-color: var(--accent-color) ;
+    background-color: var(--secondary-color) ;
 }
 .span2:hover{
     background-color: var(--accompany-color);
@@ -313,7 +375,7 @@ transition: background-color 0.5s ease-in-out;
     #profile{
     
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
    
     }
     #profile p{
@@ -321,16 +383,47 @@ transition: background-color 0.5s ease-in-out;
     }
    
     #work{
-        
+        margin-top: 3vh;
        width: 90vw;
        height: 40vh;
        
     
     }
-    #work ul{
+
       
-       line-height:5vh;
+      #job-list li {
+        
+        align-items:center;
+        padding: 2vh 3vw;
+        margin-bottom: 2vh;
+        
+      
+        box-shadow: 0 1vh 2vw rgba(0, 0, 0, 0.1);
+        
+      }
+      
+
+  
+    
+    #job-list li:hover {
+        background-color: var(--secondary-color);
+        background: linear-gradient(45deg, var(--accompany-color), var(--highlight-color));
+        box-shadow: 0 2vh 3vw rgba(0, 0, 0, 0.2);
+       
+        transform: translateX(10px);
     }
+      
+      #job-list li i {
+        font-size: 16px;
+        margin-right: 1vw;
+        
+      }
+    
+      
+      
+
+
+
    
      #hobbies{
        width: 100vw;
@@ -353,21 +446,35 @@ transition: background-color 0.5s ease-in-out;
     .project-div{
         height: 100vh;
     width: 100vw;
-    padding: 6px;
+    padding: 15%;
+    justify-content: space-evenly;
         
     
     }
     .project-details{
-        width: 100vw;
+        width: 100%;
        
     }
     .project-image{
-        width: 100vw;
-        height: 50vh;
-        
+        width: 60vw;
+        height: 20vh;
+    }
+    #nuria{
+        height: 20vh;
+        object-fit:fill;
+      
         
     }
-  
+    #fool{
+        height: 20vh;
+        object-fit:fill;
+        
+    }
+    #zeraki{
+        height: 21vh;
+        object-fit:fill;
+        
+    }
     
     #contact{
         width: 100vw;
