--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
   background-color: #fdfafa;
   --secondary-color: #E6E6FA;
   --tertiary-color: aliceblue;
+  --accent-color: rgb(80, 37, 233);
   --primary-color: #fdfafa;
   --accompany-color: rgb(248, 33, 33);
   --contrast-color:black;
