--- a/main.css
+++ b/main.css
@@ -87,7 +87,7 @@ gap: 3vh;
     padding-left: 7vw;
     padding-right: 7vw;
    margin-right: -1vw;
-    border: 3px solid var(--secondary-color);
+    border: 3px solid var(--accent-color);
 
     cursor: url(https://cur.cursors-4u.net/cursors/cur-2/cur230.cur), auto !important;
 
