--- a/main.css
+++ b/main.css
@@ -373,6 +373,7 @@ transition: background-color 0.5s ease-in-out;
  
 
     #profile{
+        padding-left: 0;
     
     flex-direction: column;
     justify-content: space-between;
@@ -386,13 +387,15 @@ transition: background-color 0.5s ease-in-out;
         margin-top: 3vh;
        width: 100vw;
        height: 40vh;
-       
+       align-items:flex-start;
+      
     
     }
+ 
 
       
       #job-list li {
-        
+      
         align-items:center;
         padding: 2vh 3vw;
         margin-bottom: 2vh;
