--- a/main.css
+++ b/main.css
@@ -349,7 +349,7 @@ transition: background-color 0.5s ease-in-out;
     transition: background-color 0.5s ease-in-out;
 }
 .span1:hover{
-    background-color: var(--secondary-color) ;
+    background-color: var(--accent-color) ;
 }
 .span2:hover{
     background-color: var(--accompany-color);
