--- a/main.css
+++ b/main.css
@@ -147,21 +147,6 @@ gap: 3vh;
     transition:transform 0.2s ease, background-color 0.2s ease, all 0.2s ease-in-out;
   }
   
-  #job-list li::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: -100%;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background: var(--highlight-color);
-    transition: left 0.3s ease;
-}
-
-#job-list li:hover::before {
-    left: 110%;
-}
 
 #job-list li:hover {
     background-color: var(--secondary-color);
@@ -187,65 +172,34 @@ gap: 3vh;
   }
   
 
-  
-
-
- #hobbies{
+  #hobbies {
     list-style-type: none;
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
- }
-
- .not-visible{
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
- }
- 
- .hobbies-visible{
-    opacity: 1;
-    
-margin: 0;
-    width: 100%;
-    height: 10vh;
- }
- .hobbies-visible li{
-    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    line-height: -0.1rem;
+    position: absolute;
+    top: 35%;
+    transition: left 2s ease; /* Changed from transform to left */
+}
+#hobbies h1{
+    font-size: 4rem;
+    letter-spacing: -30%rem;
     margin: 0;
-    width: 16vw;
-    height: 100%;
-    color: black;
- }
-.hobbies-visible li:first-child{
-    
-    background-color: rgb(247, 184, 184);
+    padding: 0;
     
 }
-.hobbies-visible li:nth-child(2){
-    
-    background-color: rgb(248, 212, 145);
-    
+
+.not-visible {
+    left: 96.5%;
+    transition: left 3s ease;
+   
 }
-.hobbies-visible li:nth-child(3){
-    
-    background-color: rgb(250, 250, 158);
-    
-}
-.hobbies-visible li:nth-child(4){
-    
-    background-color: rgb(180, 247, 180);
-    
-}
-.hobbies-visible li:nth-child(5){
-    
-    background-color: rgb(187, 187, 250);
-    
-}
-.hobbies-visible li:nth-child(6){
-    
-    background-color: rgb(215, 169, 248);
-    
+
+.hobbies-visible {
+    left: 72%;
+    transition: left 1s ease;
 }
 
 #projects{
@@ -256,27 +210,27 @@ margin: 0;
     flex-wrap: wrap;
 }
 .project-div{
-    height: 115vh;
+    height: 45vh;
 width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     padding: 3vh;
 
 }
 .project-details{
-    width: 50vw;
+   
     display: flex;
     flex-direction: column;
     justify-content:left;
     align-items: left;
 }
 .project-image{
-    width: 50vw;
-    height: 60%;
+    width: 30vw;
+    height: 90%;
     
-    border-radius: 6px;
+  
 
     display: flex;
     align-items: center;
@@ -290,52 +244,69 @@ width: 100%;
     padding-left: 12px;
     padding-right: 12px;
     border-radius: 4px;
-    transition: background-color 0.5s ease-in-out;
+    transition: background-color 0.5s ease-in-out,transform 800ms;
     
 }
 .project-div a:hover{
     background-color:var(--primary-color) ;
+    transform: translateY(-7px);
+    transition: transform 300ms;
 }
 .project-div img{
-    object-fit: contain;
+    object-fit: cover;
 
-}
-
-#nuria{
-    height: 47.5vh;
-    border: 6px solid var(--primary-color);
-    
-}
-#fool{
-    height: 47.5vh;
-    border: 6px solid var(--secondary-color);
-    
-}
-#zeraki{
-    height: 51vh;
-    border: 6px solid var(--primary-color);
-    
 }
 
 #contact{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items:center;
+    height: 30svh;
+    width: 100%;
    
-    height: 60vh;
+   
  
+}
+#contact h2{
+    width: 30vw;
+    height: 90%;
+    
+  
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#contact h2:hover {
+  
+    color: var(--highlight-color);
+    border-radius: 10px;
+}
+
+#contact h2:hover span {
+    animation: winkAnimation 0.5s ease;
+    animation: hoverEffect 1s infinite;
+}
+
+@keyframes winkAnimation {
+    0% { transform: scaleY(1); }
+    50% { transform: scaleY(0.1); }
+    100% { transform: scaleY(1); }
 }
 
 #contact a{
     
-  
+  margin: 2rem;
     color: var(--contrast-color);
-    transition: color 0.6s ease-in-out,border-bottom o.2s ease-in-out;
+    transition: color 0.6s ease-in-out, transform 500ms ;
 }
-#contact a:hover{
+#contact a:hover {
+    transform: translateY(-6px);
     color:var(--complement-color);
-   border-bottom: 3px solid var(--secondary-color);
+    transition: transform 1000ms ;
+ 
 }
 
 .span1{
@@ -464,25 +435,7 @@ transition: background-color 0.5s ease-in-out;
         align-items: center;
         justify-content: center;
     }
-    #nuria{
-        width: 80vw;
-        height: 25vh;
-        object-fit: fill;
    
-        
-    }
-    #fool{
-        width: 80vw;
-        height: 25vh;
-        object-fit: fill;
-        
-    }
-    #zeraki{
-        width: 80vw;
-        height: 25vh;
-        object-fit: fill;
-        
-    }
     
     #contact{
         width: 100vw;
