--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 16px;
+  line-height: calc(16*1.4)px;
   font-weight: 400;
 
   color-scheme: light dark;
@@ -32,6 +33,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
   cursor: url(https://cur.cursors-4u.net/cursors/cur-2/cur116.cur), auto !important;
+  overflow-x: hidden;
 }
 
 * {
@@ -49,10 +51,7 @@ a img{
   height: 5vh;
   
 }
-p{
-  font-weight: 500;
-  font-size: 16px;
-}
+
 
 @media (prefers-color-scheme: dark) {
   :root {
