--- a/main.css
+++ b/main.css
@@ -64,6 +64,22 @@ a span:hover {
     font-weight: 700;
    
 }
+#scroll-watcher{
+    height: 10px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    background-color: var(--secondary-color);
+
+    scale: 0 1;
+    animation: scroll-watcher linear;
+    animation-timeline: scroll(y);
+}
+@keyframes scroll-watcher{
+    to{scale : 1 1;}
+}
+
 #profile{
 
 padding-top: 17vh;
@@ -75,6 +91,7 @@ align-items: center;
 height: 90vh;
 width: 100%;
 gap: 3vh;
+
 }
 #profile p{
     width: 50vw;
@@ -124,54 +141,6 @@ gap: 3vh;
    
 
 }
-#work ul li{
-    font-size: x-large;
-
- }
-
- #job-list {
-    list-style: none;
-    
-  }
-  
-  #job-list li {
-    display: flex;
-    align-items:flex-start;
-    padding: 10px 20px;
-    margin-bottom: 2vh;
-    cursor: url(https://cur.cursors-4u.net/cursors/cur-2/cur230.cur), auto !important;
-    border-radius: 5px;
-    background-color: #f0f0f0;
-    background: linear-gradient(45deg, var(--secondary-color), var(--secondary-color));
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition:transform 0.2s ease, background-color 0.2s ease, all 0.2s ease-in-out;
-  }
-  
-
-#job-list li:hover {
-    background-color: var(--secondary-color);
-    background: linear-gradient(45deg, var(--accompany-color), var(--highlight-color));
-    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
-   
-    transform: translateX(10px);
-}
-  
-  #job-list li i {
-    font-size: 24px;
-    margin-right: 10px;
-    color: var(--highlight-color);
-    transition: transform 0.2s ease-in-out;
-  }
-
-  #job-list li i:hover{
-    color: var(--secondary-color);
-  }
-  
-  #job-list li:hover i {
-    transform: scale(1.1); /* Subtle hover animation */
-  }
-  
-
   #hobbies {
     list-style-type: none;
     display: flex;
@@ -259,12 +228,12 @@ width: 100%;
 
 #contact{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items:center;
-    height: 30svh;
+    height: 40svh;
     width: 100%;
-   
+   padding-bottom: 3%;
    
  
 }
@@ -347,65 +316,32 @@ transition: background-color 0.5s ease-in-out;
         padding-left: 0;
     
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+    height: 40vh;
+    align-items: flex-start;
+    margin-bottom: 10%;
    
     }
     #profile p{
         width: 75vw;
-    }
-   
-    #work{
-        margin-top: 3vh;
-       width: 100vw;
-       height: 40vh;
-       align-items:flex-start;
-      
-    
+       
     }
  
-
-      
-      #job-list li {
-      
-        align-items:center;
-        padding: 2vh 3vw;
-        margin-bottom: 2vh;
-        
-      
-        box-shadow: 0 1vh 2vw rgba(0, 0, 0, 0.1);
-        
-      }
-      
-
-  
-    
-    #job-list li:hover {
-        background-color: var(--secondary-color);
-        background: linear-gradient(45deg, var(--accompany-color), var(--highlight-color));
-        box-shadow: 0 2vh 3vw rgba(0, 0, 0, 0.2);
-       
-        transform: translateX(10px);
-    }
-      
-      #job-list li i {
-        font-size: 16px;
-        margin-right: 1vw;
-        
-      }
-    
-      
-      
-
-
 
    
      #hobbies{
        width: 100vw;
+       position: relative;
+       left: 6%;
+       top: 0;
+       margin-top: 8%;
+       margin-bottom: 8%;
      }
     
   
      .hobbies-visible{
         width: 100vw;
+        position: relative;
      }
 
    
@@ -418,30 +354,41 @@ transition: background-color 0.5s ease-in-out;
         flex-wrap: wrap;
     }
     .project-div{
-        height: 70vh;
-    width: 100vw;
-    padding: 10%;
-    font-size: 18px;
-    justify-content: space-evenly;
+        height: 35vh;
+    width: 100%;
+   
+  
+    justify-content: center;
+    align-items: center;
         
     
     }
     .project-details{
-        width: 100%;
+        display: none;
        
     }
     .project-image{
         display: flex;
         align-items: center;
         justify-content: center;
+        width: 100%;
+        height: 90%;
     }
    
     
     #contact{
-        width: 100vw;
+        background-color: var(--secondary-color);
+        width: 100%;
        
-        height: 50vh;
+        height: 40vh;
+        flex-direction: column;
+        justify-content: center;
      
+    }
+    #contact h2{
+        width: 100%;
+        height: 20%;
+        text-align: center;
     }
     #contact img{
         width: 20vw;
