--- a/main.css
+++ b/main.css
@@ -331,12 +331,13 @@ transition: background-color 0.5s ease-in-out;
 
    
      #hobbies{
-       width: 100vw;
+       width: 100%;
        position: relative;
        left: 6%;
        top: 0;
        margin-top: 10%;
        margin-bottom: 10%;
+       height: 50vw;
      }
     
   
