--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora&family=Montserrat:wght@400;700&display=swap');
+
 :root {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
   font-size: 16px;
   line-height: calc(16*1.4)px;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(8, 8, 8, 0.87);
-  background-color: #fdfafa;
+  background-color: #e7e5e5;
   --secondary-color: #E6E6FA;
   --tertiary-color: aliceblue;
   --accent-color: rgb(80, 37, 233);
@@ -23,6 +25,8 @@
 }
 
 body {
+ 
+  font-family: 'Lato', sans-serif;
   
   margin: 0;
   padding: 2px;
@@ -38,6 +42,10 @@ body {
 
 * {
   box-sizing: border-box;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Playfair Display', serif;
 }
 a{
   color:var(--highlight-color);
