--- a/main.css
+++ b/main.css
@@ -20,8 +20,8 @@
     border-bottom: 1px solid var(--contrast-color);
 }
 #nav li{
-    margin-left: 2vw;
-    margin-right: 2vw;
+    margin-left: 2%;
+    margin-right: 2%;
     
 }
 
@@ -368,7 +368,7 @@ transition: background-color 0.5s ease-in-out;
 @media screen and (max-width:800px) {
     #nav{
        
-        width: 100vw;
+        width: 100%;
         height: 15vh;
         justify-content: space-evenly;
        
@@ -386,7 +386,7 @@ transition: background-color 0.5s ease-in-out;
     
     flex-direction: column;
     justify-content: center;
-    height: 45vh;
+    height: 50vh;
     align-items: flex-start;
     margin-bottom: 10%;
     margin-top: 10%;
@@ -400,10 +400,9 @@ transition: background-color 0.5s ease-in-out;
 
    
      #hobbies{
-       width: 100%;
+       width: 94%;
        position: relative;
        left: 6%;
-       top: 0;
        margin-top: 10%;
        margin-bottom: 10%;
        height: 55vw;
@@ -411,7 +410,7 @@ transition: background-color 0.5s ease-in-out;
     
   
      .hobbies-visible{
-        width: 100vw;
+        width: 100%;
         position: relative;
      }
 
@@ -423,8 +422,7 @@ transition: background-color 0.5s ease-in-out;
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
-        margin-top: 5
-        5;
+        margin-top:10%;
     }
     .project-div{
         height: 35vh;
