--- a/main.css
+++ b/main.css
@@ -409,7 +409,7 @@ transition: background-color 0.5s ease-in-out;
        margin-top: 10%;
        margin-bottom: 10%;
        height: 55vw;
-       border-left:none ;
+       border:none ;
      }
 
     
