--- a/main.css
+++ b/main.css
@@ -405,7 +405,7 @@ transition: background-color 0.5s ease-in-out;
      #hobbies{
        width: 100%;
        position: relative;
-       left: 0;
+       left: 6.2%;
        margin-top: 10%;
        margin-bottom: 10%;
        height: 55vw;
