--- a/style.css
+++ b/style.css
@@ -33,9 +33,9 @@ body {
   display: flex;
   flex-direction: column;
 
-  width: 100%;
+  
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100svh;
   cursor: url(https://cur.cursors-4u.net/cursors/cur-2/cur116.cur), auto !important;
   overflow-x: hidden;
 }
@@ -51,14 +51,9 @@ a{
   color:var(--highlight-color);
   font-weight: 600;
   text-decoration: none;
-  cursor: url(https://cur.cursors-4u.net/cursors/cur-2/cur106.cur), auto !important;
+  cursor: url(https://cur.cursors-4u.net/cursors/cur-2/cur106.cur), auto;
 }
-a img{
-  cursor: url(https://cur.cursors-4u.net/cursors/cur-2/cur106.cur), auto !important;
-  width:3vw;
-  height: 5vh;
-  
-}
+
 
 
 @media (prefers-color-scheme: dark) {
