--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
   --accent-color: rgb(80, 37, 233);
   --primary-color: #fdfafa;
   --accompany-color: rgb(248, 33, 33);
-  --contrast-color:black;
+  --contrast-color:rgb(12, 0, 0);
   --complement-color: rgb(167, 161, 161);
   --highlight-color:coral;
 
@@ -53,6 +53,28 @@ a{
   text-decoration: none;
   cursor: url(https://cur.cursors-4u.net/cursors/cur-2/cur106.cur), auto;
 }
+
+.cursor-trail {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background-color: var(--accent-color);
+  border-radius: 50%;
+  pointer-events: none;
+}
+
+.particle {
+  position: absolute;
+  width: 5px;
+  height: 5px;
+  background-color: var(--highlight-color);
+  border-radius: 50%;
+  pointer-events: none;
+  transition: opacity 1s, transform 1s;
+}
+
+
+
 
 
 
