--- a/main.css
+++ b/main.css
@@ -235,6 +235,7 @@ a span:hover {
     opacity: 0; /* Initial state: hidden */
     transform: translateY(50px); /* Initial state: moved down */
     transition: opacity 0.6s ease-out, transform 0.6s ease-out; /* Smooth transition */
+    z-index: 3;
   }
   
   .project-div.visible {
